--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.10.1",
     "next": "13.5.5",
+    "projex-ui": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
