--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.1",
+    "js-cookie": "^3.0.5",
     "next": "13.5.5",
     "projex-ui": "^1.1.0",
     "react": "^18",
@@ -19,6 +20,7 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
